# obsidian-chest

./: .gitignore  CMakeLists.txt  README.md  main.cpp  oc.cpp  oc.h  os.h
include/: default_manager.h  manager.h  oc.h
source/: default_manager.cpp  manager.cpp  oc.cpp
tests/: CMakeLists.txt
tests/main_test/: CMakeLists.txt  main.cpp
